--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>JavaScript Console Resume</title>
     </head>
     <body>
-        
-        <script src="app.js"></script>
+        <h1>Check The Console To View My Resume!</h1>
+        <script src="resume.js"></script>
     </body>
 </html>
